--- a/index.html
+++ b/index.html
@@ -8,82 +8,138 @@
     <link rel="stylesheet" href="./styles.css">
 </head>
 
-<body>
-    <div class="container">
-        <!-- 横の画像を二枚縦並びにする -->
-        <div class="main-box col-2pic">
-            <div class="c-2pic-col">
-                <a href="./img/pic1.jpeg"><img src="./img/pic1.jpeg" alt=""></a>
-            </div>
-            <div class="c-2pic-col">
-                <a href="./img/pic2.jpeg"><img src="./img/tatenaga.jpeg" alt=""></a>
-            </div>
-        </div>
+<div class="main">
+    <div class="main-box container">
+        <img src="./img/pic1.jpeg" alt="" id="itemA">
+        <img src="./img/pic2.jpeg" alt="" id="itemB">
+    </div>
 
+    <div class="container2pic-ver">
+        <img src="./img/pic3.jpeg" alt="" id="itemC">
+        <img src="./img/pic3.jpeg" alt="" id="itemD">
+    </div>
 
-
-
-        <!-- 縦の画像を二枚横並びにする -->
-        <div class="main-box row-2pic">
-            <div class="c-2pic">
-                <a href="./img/pic1.jpeg"><img src="./img/pic1.jpeg" alt=""></a>
-            </div>
-            <div class="c-2pic">
-                <a href="./img/pic2.jpeg"><img src="./img/tatenaga.jpeg" alt=""></a>
-            </div>
-
-
-        </div>
-
-        <!-- 3枚の画像を表示する -->
-        <div class="main-box3pic row-3pic">
-            <div class="c-3pic">
-                <a href="./img/pic1.jpeg"><img src="./img/pic1.jpeg" alt=""></a>
-            </div>
-
-            <div class="c-3pic-square">
-                <a href="./img/pic2.jpeg"><img src="./img/tatenaga.jpeg" alt=""></a>
-            </div>
-
-            <div class="c-3pic-square">
-                <a href="./img/pic2.jpeg"><img src="./img/pic4.jpeg" alt=""></a>
-            </div>
-        </div>
-
-        <div class="main-box3pic row-3pic-2pic-bottom">
-            <div class="c-2pic-col">
-                <a href="./img/pic1.jpeg"><img src="./img/pic1.jpeg" alt=""></a>
-            </div>
-
-            <div class="c-3pic-square">
-                <a href="./img/pic2.jpeg"><img src="./img/tatenaga.jpeg" alt=""></a>
-            </div>
-
-            <div class="c-3pic-square">
-                <a href="./img/pic2.jpeg"><img src="./img/pic4.jpeg" alt=""></a>
-            </div>
-        </div>
-
-
-        <div class="main-box3pic row-3pic-2pic-bottom0">
-            <div class="c-2pic-col">
-                <a href="./img/pic1.jpeg"><img src="./img/pic1.jpeg" alt=""></a>
-            </div>
-
-            <div class="c-3pic-square">
-                <a href="./img/pic2.jpeg"><img src="./img/tatenaga.jpeg" alt=""></a>
-            </div>
-
-            <div class="c-3pic-square">
-                <a href="./img/pic2.jpeg"><img src="./img/pic4.jpeg" alt=""></a>
-            </div>
-        </div>
-
-
-
+    <!-- 画像3枚 -->
+    <div class="container3pic-1ver">
+        <img src="./img/pic1.jpeg" alt="" id="itemE">
+        <img src="./img/pic3.jpeg" alt="" id="itemF">
+        <img src="./img/pic3.jpeg" alt="" id="itemG">
 
     </div>
 
-</body>
+    <div class="container3pic-1side">
+
+        <img src="./img/pic3.jpeg" alt="" id="itemH">
+        <img src="./img/pic3.jpeg" alt="" id="itemI">
+        <img src="./img/pic3.jpeg" alt="" id="itemJ">
+
+    </div>
+
+
+    <div class="container3pic-1sidebig">
+        <img src="./img/pic3.jpeg" alt="" id="itemK">
+        <img src="./img/pic3.jpeg" alt="" id="itemN">
+        <img src="./img/pic3.jpeg" alt="" id="itemM">
+        <!-- <div id="itemK"></div>
+        <div id="itemN"></div>
+        <div id="itemM"></div> -->
+
+    </div>
+
+    <!-- 4枚画像 -->
+
+
+    <div class="container4pic">
+        <img src="./img/pic1.jpeg" alt="" id="itemo">
+        <img src="./img/pic2.jpeg" alt="" id="itemp">
+        <img src="./img/pic3.jpeg" alt="" id="itemq">
+        <img src="./img/pic4.jpeg" alt="" id="itemr">
+        <!-- <div id="itemo"></div>
+        <div id="itemp"></div>
+        <div id="itemq"></div>
+        <div id="itemr"></div> -->
+
+    </div>
+
+    <div class="container4pic-3bottom">
+        <img src="./img/pic1.jpeg" alt="" id="items">
+        <img src="./img/pic2.jpeg" alt="" id="itemt">
+        <img src="./img/pic3.jpeg" alt="" id="itemu">
+        <img src="./img/pic4.jpeg" alt="" id="itemv">
+        <!-- <div id="items"></div>
+        <div id="itemt"></div>
+        <div id="itemu"></div>
+        <div id="itemv"></div> -->
+
+    </div>
+
+    <div class="container4pic-3side">
+        <img src="./img/pic1.jpeg" alt="" id="itemw">
+        <img src="./img/pic2.jpeg" alt="" id="itemx">
+        <img src="./img/pic3.jpeg" alt="" id="itemy">
+        <img src="./img/pic4.jpeg" alt="" id="itemz">
+        <!-- <div id="itemw"></div>
+        <div id="itemx"></div>
+        <div id="itemy"></div>
+        <div id="itemz"></div> -->
+
+    </div>
+
+    <div class="container4pic-3bottom-nomal">
+        <img src="./img/pic1.jpeg" alt="" id="item1">
+        <img src="./img/pic2.jpeg" alt="" id="item2">
+        <img src="./img/pic3.jpeg" alt="" id="item3">
+        <img src="./img/pic4.jpeg" alt="" id="item4">
+        <!-- <div id="item1"></div>
+        <div id="item2"></div>
+        <div id="item3"></div>
+        <div id="item4"></div> -->
+
+    </div>
+
+    <div class="container4pic-3side-nomal">
+        <img src="./img/pic1.jpeg" alt="" id="item5">
+        <img src="./img/pic2.jpeg" alt="" id="item6">
+        <img src="./img/pic3.jpeg" alt="" id="item7">
+        <img src="./img/pic4.jpeg" alt="" id="item8">
+        <!-- <div id="item5"></div>
+        <div id="item6"></div>
+        <div id="item7"></div>
+        <div id="item8"></div> -->
+
+    </div>
+    <!-- 画像が5枚の時 -->
+
+    <div class="container5pic-3side">
+        <img src="./img/pic1.jpeg" alt="" id="item9">
+        <img src="./img/pic2.jpeg" alt="" id="item10">
+        <img src="./img/pic3.jpeg" alt="" id="item11">
+        <img src="./img/pic4.jpeg" alt="" id="item12">
+        <img src="./img/pic4.jpeg" alt="" id="item13">
+        <!-- <div id="item9"></div>
+        <div id="item10"></div>
+        <div id="item11"></div>
+        <div id="item12"></div>
+        <div id="item13"></div> -->
+
+    </div>
+
+    <div class="container5pic-3side">
+        <img src="./img/pic1.jpeg" alt="" id="item9">
+        <img src="./img/pic2.jpeg" alt="" id="item10">
+        <img src="./img/pic3.jpeg" alt="" id="item11">
+        <img src="./img/pic4.jpeg" alt="" id="item12">
+        <img src="./img/pic4.jpeg" alt="" id="item13">
+        <!-- <div id="item9"></div>
+        <div id="item10"></div>
+        <div id="item11"></div>
+        <div id="item12"></div>
+        <div id="item13"></div> -->
+
+    </div>
+
+
+</div>
+
 
 </html>
