--- a/index.html
+++ b/index.html
@@ -9,137 +9,20 @@
 </head>
 
 <div class="main">
-    <div class="main-box container">
-        <img src="./img/pic1.jpeg" alt="" id="itemA">
-        <img src="./img/pic2.jpeg" alt="" id="itemB">
+    <input type="button" value="画像が2枚" onclick="clickBtn1()" />
+    <input type="button" value="画像が3枚" onclick="clickBtn2()" />
+    <input type="button" value="画像が4枚" onclick="clickBtn3()" />
+    <input type="button" value="画像が5枚" onclick="clickBtn4()" />
+    <div id="mb">
+        <img src="./img/pic1.jpeg" alt="" class="a">
+        <img src="./img/pic2.jpeg" alt="" class="b">
+        <img src="./img/pic3.jpeg" alt="" class="c">
+        <img src="./img/pic4.jpeg" alt="" class="d">
+        <img src="./img/tatenaga.jpeg" alt="" class="e">
     </div>
-
-    <div class="container2pic-ver">
-        <img src="./img/pic3.jpeg" alt="" id="itemC">
-        <img src="./img/pic3.jpeg" alt="" id="itemD">
-    </div>
-
-    <!-- 画像3枚 -->
-    <div class="container3pic-1ver">
-        <img src="./img/pic1.jpeg" alt="" id="itemE">
-        <img src="./img/pic3.jpeg" alt="" id="itemF">
-        <img src="./img/pic3.jpeg" alt="" id="itemG">
-
-    </div>
-
-    <div class="container3pic-1side">
-
-        <img src="./img/pic3.jpeg" alt="" id="itemH">
-        <img src="./img/pic3.jpeg" alt="" id="itemI">
-        <img src="./img/pic3.jpeg" alt="" id="itemJ">
-
-    </div>
-
-
-    <div class="container3pic-1sidebig">
-        <img src="./img/pic3.jpeg" alt="" id="itemK">
-        <img src="./img/pic3.jpeg" alt="" id="itemN">
-        <img src="./img/pic3.jpeg" alt="" id="itemM">
-        <!-- <div id="itemK"></div>
-        <div id="itemN"></div>
-        <div id="itemM"></div> -->
-
-    </div>
-
-    <!-- 4枚画像 -->
-
-
-    <div class="container4pic">
-        <img src="./img/pic1.jpeg" alt="" id="itemo">
-        <img src="./img/pic2.jpeg" alt="" id="itemp">
-        <img src="./img/pic3.jpeg" alt="" id="itemq">
-        <img src="./img/pic4.jpeg" alt="" id="itemr">
-        <!-- <div id="itemo"></div>
-        <div id="itemp"></div>
-        <div id="itemq"></div>
-        <div id="itemr"></div> -->
-
-    </div>
-
-    <div class="container4pic-3bottom">
-        <img src="./img/pic1.jpeg" alt="" id="items">
-        <img src="./img/pic2.jpeg" alt="" id="itemt">
-        <img src="./img/pic3.jpeg" alt="" id="itemu">
-        <img src="./img/pic4.jpeg" alt="" id="itemv">
-        <!-- <div id="items"></div>
-        <div id="itemt"></div>
-        <div id="itemu"></div>
-        <div id="itemv"></div> -->
-
-    </div>
-
-    <div class="container4pic-3side">
-        <img src="./img/pic1.jpeg" alt="" id="itemw">
-        <img src="./img/pic2.jpeg" alt="" id="itemx">
-        <img src="./img/pic3.jpeg" alt="" id="itemy">
-        <img src="./img/pic4.jpeg" alt="" id="itemz">
-        <!-- <div id="itemw"></div>
-        <div id="itemx"></div>
-        <div id="itemy"></div>
-        <div id="itemz"></div> -->
-
-    </div>
-
-    <div class="container4pic-3bottom-nomal">
-        <img src="./img/pic1.jpeg" alt="" id="item1">
-        <img src="./img/pic2.jpeg" alt="" id="item2">
-        <img src="./img/pic3.jpeg" alt="" id="item3">
-        <img src="./img/pic4.jpeg" alt="" id="item4">
-        <!-- <div id="item1"></div>
-        <div id="item2"></div>
-        <div id="item3"></div>
-        <div id="item4"></div> -->
-
-    </div>
-
-    <div class="container4pic-3side-nomal">
-        <img src="./img/pic1.jpeg" alt="" id="item5">
-        <img src="./img/pic2.jpeg" alt="" id="item6">
-        <img src="./img/pic3.jpeg" alt="" id="item7">
-        <img src="./img/pic4.jpeg" alt="" id="item8">
-        <!-- <div id="item5"></div>
-        <div id="item6"></div>
-        <div id="item7"></div>
-        <div id="item8"></div> -->
-
-    </div>
-    <!-- 画像が5枚の時 -->
-
-    <div class="container5pic-3side">
-        <img src="./img/pic1.jpeg" alt="" id="item9">
-        <img src="./img/pic2.jpeg" alt="" id="item10">
-        <img src="./img/pic3.jpeg" alt="" id="item11">
-        <img src="./img/pic4.jpeg" alt="" id="item12">
-        <img src="./img/pic4.jpeg" alt="" id="item13">
-        <!-- <div id="item9"></div>
-        <div id="item10"></div>
-        <div id="item11"></div>
-        <div id="item12"></div>
-        <div id="item13"></div> -->
-
-    </div>
-
-    <div class="container5pic-3side">
-        <img src="./img/pic1.jpeg" alt="" id="item9">
-        <img src="./img/pic2.jpeg" alt="" id="item10">
-        <img src="./img/pic3.jpeg" alt="" id="item11">
-        <img src="./img/pic4.jpeg" alt="" id="item12">
-        <img src="./img/pic4.jpeg" alt="" id="item13">
-        <!-- <div id="item9"></div>
-        <div id="item10"></div>
-        <div id="item11"></div>
-        <div id="item12"></div>
-        <div id="item13"></div> -->
-
-    </div>
-
 
 </div>
 
+<script src="./index.js"></script>
 
 </html>
