--- a/index.html
+++ b/index.html
@@ -9,16 +9,18 @@
 </head>
 
 <div class="main">
-    <input type="button" value="画像が2枚" onclick="clickBtn1()" />
-    <input type="button" value="画像が3枚" onclick="clickBtn2()" />
-    <input type="button" value="画像が4枚" onclick="clickBtn3()" />
-    <input type="button" value="画像が5枚" onclick="clickBtn4()" />
+    <div class="space-module">
+        <input type="button" value="画像が2枚" onclick="clickBtn1()" class="button" />
+        <input type="button" value="画像が3枚" onclick="clickBtn2()" class="button" />
+        <input type="button" value="画像が4枚" onclick="clickBtn3()" class="button" />
+        <input type="button" value="画像が5枚" onclick="clickBtn4()" class="button" />
+    </div>
     <div id="mb">
-        <img src="./img/pic1.jpeg" alt="" class="a">
-        <img src="./img/pic2.jpeg" alt="" class="b">
-        <img src="./img/pic3.jpeg" alt="" class="c">
-        <img src="./img/pic4.jpeg" alt="" class="d">
-        <img src="./img/tatenaga.jpeg" alt="" class="e">
+        <img src="img/11.png" alt="" class="a">
+        <img src="img/2.png" alt="" class="b">
+        <img src="img/3.png" alt="" class="c">
+        <img src="img/4.png" alt="" class="d">
+        <img src="img/5.png" alt="" class="e">
     </div>
 
 </div>
